--- a/src/Arii/JIDBundle/Resources/config/services.yml
+++ b/src/Arii/JIDBundle/Resources/config/services.yml
@@ -19,6 +19,11 @@ services:
         class: Arii\JIDBundle\Service\AriiHistory
         arguments: [ "@arii_core.portal", "@arii_core.dhtmlx", "@arii_core.sql", "@arii_core.date", "@arii_core.tools"]
 
+# Passage en doctrine
+    arii_jid.history2:
+        class: Arii\JIDBundle\Service\AriiHistory2
+        arguments: [ "@arii_core.portal", "@arii_core.tools"]
+
     arii_jid.graphviz:
         class: Arii\JIDBundle\Service\AriiGraphviz
         arguments: [  "@arii_core.tools", "@arii_core.dhtmlx", "@arii_core.sql"  ]
