--- a/src/Arii/JIDBundle/Resources/config/routing.yml
+++ b/src/Arii/JIDBundle/Resources/config/routing.yml
@@ -41,7 +41,19 @@ html_JID_config:
     path:  /config.html
     defaults: { _controller: AriiJIDBundle:Config:config }
 
+
+# --------------------------------------------------------------------------
+# Vue consolidee
+# --------------------------------------------------------------------------
 arii_JID_index:
+    path:  /
+    defaults: { _controller: AriiJIDBundle:Global:index }
+
+xml_JID_global_orders_grid:
+    path:  /global/orders/grid.xml
+    defaults: { _controller: AriiJIDBundle:Global:orders }
+
+arii_JID_index2:
     path:  /{db}
     defaults: { _controller: AriiJIDBundle:Default:index, db: ojs_db }
 
