--- a/src/Arii/JIDBundle/Resources/config/routing.yml
+++ b/src/Arii/JIDBundle/Resources/config/routing.yml
@@ -1,13 +1,17 @@
-arii_JID_rest:
-    resource: "@AriiJIDBundle/Resources/config/rest.yml"
-    prefix:   /api
-    
 # --------------------------------------------------------------------------
 # PAGES PRINCIPALES
 # --------------------------------------------------------------------------
+arii_JID_index:
+    path:  /
+    defaults: { _controller: AriiJIDBundle:Default:index }
+
 html_JID_summary:
     path:  /{db}/summary.html
     defaults: { _controller: AriiJIDBundle:Default:summary }
+
+arii_JID_swagger:
+    path:  /swagger
+    defaults: { _controller: AriiJIDBundle:Default:swagger }
 
 arii_JID_readme:
     path:  /readme
